Fix: Removed link to quick start guide

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Beate Ottenwälder"
   avatar           : "/assets/images/profile.jpg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
+  bio              : "Shaping the future one step at a time."
   location         : "Stuttgart, Germany"
   email            :
   uri              :
